# BlockSecurity_Linux

./: CMakeLists.txt
data/: Key.txt
src/: main.cpp
src/BluetoothDevice/: BluetoothDevice.cpp  BluetoothDevice.h
src/BluetoothWork/: Bluetooth.cpp  Bluetooth.h
src/ComprasionKey/: RaSComparisonKey.cpp  RaSComparisonKey.h
src/Cripta/: Cript.cpp  Cript.h  Encript.cpp  Encript.h
src/Database/: WorkDatabase.cpp  WorkDatabase.h
src/Device/: Device.h
src/SelectDevice/: FS_Device.h  SelectDeviceBluetooth.h  SelectDeviceUSB.h
src/SelectWorkProgram/: SelectWork.h  SelectWorkProgram.h  WorkProgram.h
src/USBDevice/: USBDevice.cpp  USBDevice.h
src/UsbWork/: USB.cpp  USB.h
